--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "savvii/warpdrive",
   "description": "This plugin manages various features used by Savvii",
   "license": "GPLv3",
+  "type": "wordpress-plugin",
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
   }
