--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "savvii/warpdrive",
   "description": "This plugin manages various features used by Savvii",
-  "license": "GPLv3",
+  "license": "GPL-3.0-only",
   "type": "wordpress-plugin",
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
