--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-  - '7.1'
-  - '7.2'
-  - '7.3'
+  - 7.1
+  - 7.2
+  - 7.3
 
 env:
   global:
@@ -12,6 +12,8 @@ env:
     - TZ=Europe/Amsterdam
   matrix:
     - WP_VERSION=latest
+    - WP_VERSION=5.1.X
+    - WP_VERSION=5.0.X
     - WP_VERSION=4.9.X
     - WP_VERSION=4.8.X
     - WP_VERSION=4.7.X
@@ -22,6 +24,29 @@ env:
     - WP_VERSION=4.2.X
     - WP_VERSION=4.1.X
     - WP_VERSION=4.0.X
+
+matric:
+  exclude:
+    - php: 7.3
+      env: WP_VERSION=4.0.X
+    - php: 7.3
+      env: WP_VERSION=4.1.X
+    - php: 7.3
+      env: WP_VERSION=4.2.X
+    - php: 7.3
+      env: WP_VERSION=4.3.X
+    - php: 7.3
+      env: WP_VERSION=4.4.X
+    - php: 7.3
+      env: WP_VERSION=4.5.X
+    - php: 7.3
+      env: WP_VERSION=4.6.X
+    - php: 7.3
+      env: WP_VERSION=4.7.X
+    - php: 7.3
+      env: WP_VERSION=4.8.X
+    - php: 7.3
+      env: WP_VERSION=4.9.X
 
 before_script:
   - composer install
