--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: php
 
 php:
-  - '5.6'
-  - '7.0'
-  - '7.1'
-  - '7.2'
+  - 7.1
+  - 7.2
+  - 7.3
 
 env:
   global:
@@ -13,6 +12,9 @@ env:
     - TZ=Europe/Amsterdam
   matrix:
     - WP_VERSION=latest
+    - WP_VERSION=5.1.X
+    - WP_VERSION=5.0.X
+    - WP_VERSION=4.9.X
     - WP_VERSION=4.8.X
     - WP_VERSION=4.7.X
     - WP_VERSION=4.6.X
@@ -22,6 +24,29 @@ env:
     - WP_VERSION=4.2.X
     - WP_VERSION=4.1.X
     - WP_VERSION=4.0.X
+
+matrix:
+  exclude:
+    - php: 7.3
+      env: WP_VERSION=4.9.X
+    - php: 7.3
+      env: WP_VERSION=4.8.X
+    - php: 7.3
+      env: WP_VERSION=4.7.X
+    - php: 7.3
+      env: WP_VERSION=4.6.X
+    - php: 7.3
+      env: WP_VERSION=4.5.X
+    - php: 7.3
+      env: WP_VERSION=4.4.X
+    - php: 7.3
+      env: WP_VERSION=4.3.X
+    - php: 7.3
+      env: WP_VERSION=4.2.X
+    - php: 7.3
+      env: WP_VERSION=4.1.X
+    - php: 7.3
+      env: WP_VERSION=4.0.X
 
 before_script:
   - composer install
