--- a/.github/workflows/tag_release_asset.yml
+++ b/.github/workflows/tag_release_asset.yml
@@ -2,18 +2,22 @@ on:
   push:
     tags:
       - '*'
-  jobs:
-    tag_and_release:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - run: rm -rf .git .DS_Store
-        - run: mkdir -p /tmp/release
-        - run: cp -R . /tmp/release
-        - run: mv /tmp/release .
+jobs:
+  tag_and_release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: rm -rf .git .DS_Store
+      - run: mkdir -p /tmp/release
+      - run: cp -R . /tmp/release
+      - run: mv /tmp/release warpdrive
+      - run: zip -r package.zip warpdrive
 
-        - uses: meeDamian/github-release@2.0
-          with:
-            token: ${{ secrets.GITHUB_TOKEN }}
-            files: package:release
-            gzip: true
+      - uses: meeDamian/github-release@2.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: >
+            package:clue
+            package.zip
+          gzip: folders
+
