--- a/warpdrive-plugin/.gitattributes
+++ b/warpdrive-plugin/.gitattributes
@@ -4,10 +4,10 @@ tests export-ignore
 
 .gitattributes export-ignore
 .gitignore export-ignore
-
 composer.json export-ignore
 composer.lock export-ignore
 phpmd.xml export-ignore
 phpunit.xml export-ignore
 phpunit-multisite.xml export-ignore
+pint.xml export-ignore
 ruleset.xml export-ignore
