--- a/warpdrive-plugin/composer.json
+++ b/warpdrive-plugin/composer.json
@@ -4,6 +4,14 @@
   "license": "GPL-3.0-only",
   "type": "wordpress-plugin",
   "require-dev": {
-    "phpunit/phpunit": "5.7.*"
+    "phpunit/phpunit": "9.6.*",
+    "yoast/phpunit-polyfills": "^2.0",
+    "laravel/pint": "^1.5"
+  },
+  "scripts": {
+    "test": [
+      "vendor/bin/phpunit",
+      "vendor/bin/phpunit -c phpunit-multisite.xml"
+    ]
   }
 }
