--- a/warpdrive-plugin/composer.json
+++ b/warpdrive-plugin/composer.json
@@ -6,12 +6,17 @@
   "require-dev": {
     "phpunit/phpunit": "9.6.*",
     "yoast/phpunit-polyfills": "^2.0",
-    "laravel/pint": "^1.5"
+    "wp-coding-standards/wpcs": "^3.0"
   },
   "scripts": {
     "test": [
       "vendor/bin/phpunit",
       "vendor/bin/phpunit -c phpunit-multisite.xml"
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
