--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Package managers
-vendor/
-node_modules/
-# Testing
-build/
+/warpdrive-plugin/vendor/
 
 # OS-X ignores
 .DS_Store
@@ -17,4 +14,13 @@ Icon
 
 # phpstorm ide files
 .idea
+
+# dev wordpress
+/wordpress
+
+# warden
+.env
+
+# phpunit
+*/.phpunit.result.cache
 
